--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1">
 
-    -heading>Portfolio - Steven Willets<-heading>    
+    <title>Portfolio - Steven Willets</title>   
     <meta name="description" content="A Porfolio of my works." />
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -216,9 +216,9 @@
             <div class="content-container cf">
                 <div id="side-content">
                     <section>
-                        <article>
-                        	<h1>Steven Willets - Portfolio</h1>
-                        	<h2>Jr Front-End Web Developer</h2>
+                        <article id='business-card'>
+                        	<h2 class='name'>Steven Willets</h2>
+                        	<h2 class='position'>Jr Front-End Web Developer</h2>
                         	<p class='contact-info'>
                         		<span class='contact-address'>289 Parmelee Hill Rd, Durham CT, 06422</span> 
                         		<a class='contact-phone' href='tel:+12036504590'>(203) 650-4590</a> 
@@ -230,8 +230,7 @@
                 </div>
                 <main id="main-content">
                     <div>
-                        <p>Main Content</p>
-
+ 						<h1>Portfolio</h1>
                         <section>
                             <h2 class='content-heading'>Websites</h2>
                             <ul class='tiles'>
