--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                         		<a class='contact-phone' href='tel:+12036504590'>(203) 650-4590</a> 
                         		<a class='contact-email' href='mailto:stevenawillets@gmail.com'>stevenawillets@gmail.com</a>
                         	</p>
-                        	<p><span>See my</span> <a href='resume'>r&eacute;sum&eacute;</p>
+                        	<p><span>See my</span> <a href='resume'>r&eacute;sum&eacute;</a></p>
                         </article>
                     </section>
                 </div>
