--- a/index.html
+++ b/index.html
@@ -105,9 +105,11 @@
         }
         #main-content {
             background-color: rgb(250,250,250);
+            padding:20px;
         }
         #side-content {
             background-color: rgb(200,200,200);
+            padding:20px;
         }
 
         /* Tiles */
