--- a/index.html
+++ b/index.html
@@ -183,24 +183,16 @@
         }
 
         /* Responsive */
-        @media (min-width:479px) {
+        @media (max-width:1199px) {
 
         }
-        @media (min-width:767px) {
-            #content-wrapper .content-container {
-                flex-direction: row;
-            }
-            #main-content {
-                flex: 2;
-            }
-            #side-content {
-                flex: 1;
-            }
-        }
-        @media (min-width:992px) {
+        @media (max-width:992px) {
 
-        }
-        @media (min-width:1199px) {
+        } 
+        @media (max-width:767px) {
+
+        }       
+        @media (max-width:479px) {
 
         }
     </style>
