--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
         }
         #content-wrapper .content-container {
             display: flex;
+            flex-direction: column;
         }
         #main-content {
             background-color: rgb(250,250,250);
