--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
         }
         h1, h2, h3, h4, h5, strong {
             font-weight: 600;
+            margin: 0;
+            line-height: 1.1;
         }
         * {
             box-sizing: border-box;
@@ -71,7 +73,7 @@
         }
         .section-container {
             width: 100%;
-            max-width: 1400px;
+            max-width: 1200px;
             margin: 0 auto;
         }
         .content-section {
@@ -180,7 +182,6 @@
         	padding: 20px;
     	    box-shadow: -4px 0px 3px -3px rgba(30,30,30,.4);
     	    position: relative;
-    	    flex: 1;
         }
         .close {
         	position: absolute;
@@ -193,12 +194,7 @@
         	color: inherit;
         	font-size: 22px;
         }
-        .active .tile-image {
 
-        }
-        .inactive .tile-info {
-        	display: none;
-        }
 
         /* Footer */
         footer {
@@ -254,7 +250,7 @@
 	                        		</li>
 	                        	</ul>
 	                        	<p>
-	                        		<span>See my</span>
+	                        		<span>View my</span>
 	                        		<a href='resume'>r&eacute;sum&eacute;</a>
 	                        	</p>
                         	</div>
@@ -422,7 +418,66 @@
                         <section>
                         	<h2 class='content-heading'>JavaScript</h2>
                         	<ul class='tiles'>
-                        		<li class='tile inactive'></li>
+                                <li class='tile inactive'>
+                                	<img class='tile-thumbnail' src="images/" alt='Ticket Results with Filters' />
+                                	<div class='tile-content'>
+	                                	<img class='tile-image' src="images/" alt='Ticket Results with Filters' />
+	                                	<article class='tile-info'>
+	                                		<a class='close' href='#'><i class='fa fa-window-close'></i></a>
+	                                		<div class='tile-heading'>
+	                                			<h3>Ticket Results with Filters</h3>
+	                                			<span>2018</span>
+	                                		</div>
+	                                		<a class='tile-link' target='_blank' href='https://jsfiddle.net/steven_willets/6z3aetug/'>View in JSFiddle</a>
+	                                		<p></p>
+	                                	</article>
+                                	</div>
+                                </li>
+                                <li class='tile inactive'>
+                                	<img class='tile-thumbnail' src="images/" alt='Ticket Results as Cards' />
+                                	<div class='tile-content'>
+	                                	<img class='tile-image' src="images/" alt='Ticket Results as Cards' />
+	                                	<article class='tile-info'>
+	                                		<a class='close' href='#'><i class='fa fa-window-close'></i></a>
+	                                		<div class='tile-heading'>
+	                                			<h3>Ticket Results as Cards</h3>
+	                                			<span>2017</span>
+	                                		</div>
+	                                		<a class='tile-link' target='_blank' href='https://jsfiddle.net/steven_willets/3twx0seL/'>View in JSFiddle</a>
+	                                		<p></p>
+	                                	</article>
+                                	</div>
+                                </li>
+                                <li class='tile inactive'>
+                                	<img class='tile-thumbnail' src="images/" alt='Ticket Results Mapped to Calendar' />
+                                	<div class='tile-content'>
+	                                	<img class='tile-image' src="images/" alt='Ticket Results Mapped to Calendar' />
+	                                	<article class='tile-info'>
+	                                		<a class='close' href='#'><i class='fa fa-window-close'></i></a>
+	                                		<div class='tile-heading'>
+	                                			<h3>Ticket Results Mapped to Calendar</h3>
+	                                			<span>2017</span>
+	                                		</div>
+	                                		<a class='tile-link' target='_blank' href='https://jsfiddle.net/steven_willets/d9365oq8/'>View in JSFiddle</a>
+	                                		<p></p>
+	                                	</article>
+                                	</div>
+                                </li>
+                                <li class='tile inactive'>
+                                	<img class='tile-thumbnail' src="images/" alt='Affiliate Search Widget Builder' />
+                                	<div class='tile-content'>
+	                                	<img class='tile-image' src="images/" alt='Affiliate Search Widget Builder' />
+	                                	<article class='tile-info'>
+	                                		<a class='close' href='#'><i class='fa fa-window-close'></i></a>
+	                                		<div class='tile-heading'>
+	                                			<h3>Affiliate Search Widget Builder</h3>
+	                                			<span>2016</span>
+	                                		</div>
+	                                		<a class='tile-link' target='_blank' href='https://jsfiddle.net/steven_willets/xw7sc182/'>View in JSFiddle</a>
+	                                		<p></p>
+	                                	</article>
+                                	</div>
+                                </li>
                         	</ul>
                         </section>
                     </div>
