--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
             flex-direction: column;
             min-height: 100vh;
             position: relative;
+            background-color: rgb(251,252,253);
         }
         .modal-open #overlay {
         	display: none;
