--- a/index.html
+++ b/index.html
@@ -211,8 +211,7 @@
     		height: auto;
         }
         .tile-info {
-        	background-color: #ddd;
-        	width: 400px;
+        	background-color: #ededed;
         	padding: 20px;
     	    box-shadow: -4px 0px 3px -3px rgba(30,30,30,.4);
     	    position: relative;
