--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
         	
         }        
         .tile-thumbnail {
-        	border: 1px solid;
+        	border: 1px solid rgba(0,0,0,.3);
         	max-height: 100%;
         	max-width: 100%;
         	transition: opacity .3s ease-in-out, border-color .3s ease-in-out;
@@ -193,6 +193,7 @@
         }
         .tile-content {
         	display: none;
+        	font-size: 0;
         }
         .active .tile-content {
         	display: block;
@@ -215,6 +216,7 @@
         	padding: 20px;
     	    box-shadow: -4px 0px 3px -3px rgba(30,30,30,.4);
     	    position: relative;
+    	    font-size: 14px;
         }
         .close {
         	position: absolute;
