--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
                             <h2 class='content-heading'>Websites</h2>
                             <ul class='tiles'>
                                 <li class='tile inactive'>
-                                	<img class='tile-thumbnail' src="images/beta-ticketliquidator.png" alt='Beta TicketLiquidator' />
+                                	<img class='tile-thumbnail' src="images/beta-ticketliquidator-thumbnail.png" alt='Beta TicketLiquidator' />
                                 	<div class='tile-content'>
 	                                	<img class='tile-image' src="images/beta-ticketliquidator.png" alt='Beta TicketLiquidator' />
 	                                	<article class='tile-info'>
@@ -320,7 +320,7 @@
                                 	</div>
                                 </li>
                                 <li class='tile inactive'>
-                                	<img class='tile-thumbnail' src="images/newyorktheatertickets.png" alt='NewYorkTheaterTickets' />
+                                	<img class='tile-thumbnail' src="images/newyorktheatertickets-thumbnail.png" alt='NewYorkTheaterTickets' />
                                 	<div class='tile-content'>
 	                                	<img class='tile-image' src="images/newyorktheatertickets.png" alt='NewYorkTheaterTickets' />
 	                                	<article class='tile-info'>
@@ -335,7 +335,7 @@
                                 	</div>
                                 </li>
                                 <li class='tile inactive'>
-                                	<img class='tile-thumbnail' src="images/rad-tickets.png" alt='Rad.Tickets' />
+                                	<img class='tile-thumbnail' src="images/rad-tickets-thumbnail.png" alt='Rad.Tickets' />
                                 	<div class='tile-content'>
 	                                	<img class='tile-image' src="images/rad-tickets.png" alt='Rad.Tickets' />
 	                                	<article class='tile-info'>
@@ -350,7 +350,7 @@
                                 	</div>
                                 </li>
                                 <li class='tile inactive'>
-                                	<img class='tile-thumbnail' src="images/revamp.png" alt='CMS Template Revamp' />
+                                	<img class='tile-thumbnail' src="images/revamp-thumbnail.png" alt='CMS Template Revamp' />
                                 	<div class='tile-content'>
 	                                	<img class='tile-image' src="images/revamp.png" alt='CMS Template Revamp' />
 	                                	<article class='tile-info'>
@@ -365,7 +365,7 @@
                                 	</div>
                                 </li>
                                 <li class='tile inactive'>
-                                	<img class='tile-thumbnail' src="images/tickets-ezevent.png" alt='EzEvent Tickets' />
+                                	<img class='tile-thumbnail' src="images/tickets-ezevent-thumbnail.png" alt='EzEvent Tickets' />
                                 	<div class='tile-content'>
 	                                	<img class='tile-image' src="images/tickets-ezevent.png" alt='EzEvent Tickets' />
 	                                	<article class='tile-info'>
@@ -380,7 +380,7 @@
                                 	</div>
                                 </li>
                                 <li class='tile inactive'>
-                                	<img class='tile-thumbnail' src="images/wsj-tickets.png" alt='Wall Street Journal Tickets' />
+                                	<img class='tile-thumbnail' src="images/wsj-tickets-thumbnail.png" alt='Wall Street Journal Tickets' />
                                 	<div class='tile-content'>
 	                                	<img class='tile-image' src="images/wsj-tickets.png" alt='Wall Street Journal Tickets' />
 	                                	<article class='tile-info'>
@@ -395,7 +395,7 @@
                                 	</div>
                                 </li>
                                 <li class='tile inactive'>
-                                	<img class='tile-thumbnail' src="images/opentable-tickets.png" alt='OpenTable Ticket Site Demo' />
+                                	<img class='tile-thumbnail' src="images/opentable-tickets-thumbnail.png" alt='OpenTable Ticket Site Demo' />
                                 	<div class='tile-content'>
 	                                	<img class='tile-image' src="images/opentable-tickets.png" alt='OpenTable Ticket Site Demo' />
 	                                	<article class='tile-info'>
@@ -410,7 +410,7 @@
                                 	</div>
                                 </li>
                                 <li class='tile inactive'>
-                                	<img class='tile-thumbnail' src="images/onbroadway.png" alt='OnBroadway' />
+                                	<img class='tile-thumbnail' src="images/onbroadway-thumbnail.png" alt='OnBroadway' />
                                 	<div class='tile-content'>
 	                                	<img class='tile-image' src="images/onbroadway.png" alt='OnBroadway' />
 	                                	<article class='tile-info'>
@@ -425,7 +425,7 @@
                                 	</div>
                                 </li>
                                 <li class='tile inactive'>
-                                	<img class='tile-thumbnail' src="images/brianwilson.png" alt='Brian Wilson Ticket Site Demo' />
+                                	<img class='tile-thumbnail' src="images/brianwilson-thumbnail.png" alt='Brian Wilson Ticket Site Demo' />
                                 	<div class='tile-content'>
 	                                	<img class='tile-image' src="images/brianwilson.png" alt='Brian Wilson Ticket Site Demo' />
 	                                	<article class='tile-info'>
@@ -440,7 +440,7 @@
                                 	</div>
                                 </li>
                                 <li class='tile inactive'>
-                                	<img class='tile-thumbnail' src="images/corporate-ticketnetwork.png" alt='TicketNetwork Corporate Site' />
+                                	<img class='tile-thumbnail' src="images/corporate-ticketnetwork-thumbnail.png" alt='TicketNetwork Corporate Site' />
                                 	<div class='tile-content'>
 	                                	<img class='tile-image' src="images/corporate-ticketnetwork.png" alt='TicketNetwork Corporate Site' />
 	                                	<article class='tile-info'>
